manifests/prd/grafana-operator/Service-grafana-operator-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: grafana-operator
    app.kubernetes.io/name: grafana-operator
    app.kubernetes.io/part-of: grafana-operator
  name: grafana-operator-metrics-service
  namespace: monitoring
spec:
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: metrics
    - name: pprof
      port: 8888
      protocol: TCP
      targetPort: pprof
  selector:
    app.kubernetes.io/instance: grafana-operator
    app.kubernetes.io/name: grafana-operator
  type: ClusterIP
