manifests/prd/grafana-operator/CiliumNetworkPolicy-grafana-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-operator
  namespace: monitoring
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: grafana.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana-operator
