manifests/prd/grafana-operator/CiliumNetworkPolicy-grafana.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  egress:
    - toFQDNs:
        - matchName: auth.kidibox.net
        - matchName: grafana.com
        - matchName: storage.googleapis.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
